# links-to-epub

./: .env  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  generated-requests.http  http-client.env.json  main.py  pyproject.toml  tests.Dockerfile  tests.py
.gitea/workflows/: cd.yml  ci.yml
.github/workflows/: cd.yml
tests/: test_happy_path.py
