[project]
name = "links-to-epub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.3.0",
    "convertext>=0.1.3",
    "docling>=2.63.0",
    "fastapi>=0.121.3",
    "feedgen>=1.0.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]

[project.scripts]
app = "uvicorn main:app"
