[project]
name = "links-to-epub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "convertext>=0.1.3",
    "docling>=2.63.0",
    "fastapi>=0.121.3",
    "feedgen>=1.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "poethepoet>=0.38.0",
]

[tool.poe.tasks]
test = "pytest tests.py"
lint = "pre-commit run --all-files"
build-and-push = "docker build --push -t registry.raspi0.hmwsl.de/links-to-epub:latest ."
